[package]
name = "ip-part"
version = "0.1.0"
description = "ip-part - ip tool"
authors = ["dehua <hidehua@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4.0"
